--- a/css/main.css
+++ b/css/main.css
@@ -242,17 +242,20 @@ ol {
   color: var(--secondary-text-color);
 }
 
-.features-container {
+.features {
+  padding-bottom: 0px;
+}
+
+.features-list {
   display: flex;
-  align-items: center;
+  gap: 30px;
+}
+
+.feature__item {
   justify-content: space-between;
 }
 
-.item-feature {
-  justify-content: space-between;
-}
-
-.icons-feature {
+.features__icon {
   display: flex;
   width: 270px;
   height: 120px;
@@ -262,11 +265,7 @@ ol {
   border-radius: 4px;
 }
 
-.our-features {
-  padding-bottom: 0px;
-}
-
-.feature {
+.feature__title {
   display: block;
   margin-bottom: 10px;
   font-weight: 700;
@@ -277,7 +276,7 @@ ol {
   color: var(--primary-text-color);
 }
 
-.features-text {
+.features__text {
   display: block;
   font-weight: 400;
   font-size: 14px;
@@ -286,12 +285,12 @@ ol {
   letter-spacing: 0.03em;
 }
 
-.advantage-list {
-  display: flex;
-  gap: 30px;
+.services {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
-.title-services {
+.services__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -301,7 +300,7 @@ ol {
   color: var(--primary-text-color);
 }
 
-.list-item-services {
+.services__list {
   list-style: none;
   text-decoration: none;
   display: flex;
@@ -310,11 +309,11 @@ ol {
   gap: 30px;
 }
 
-.photo-service {
+.services__photo {
   position: relative;
 }
 
-.text-over-photo {
+.services_text {
   position: absolute;
   bottom: 0;
   left: 0;
