--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -1,4 +1,10 @@
-.title-services {
+
+.services {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.services__title {
     margin-bottom: 50px;
     font-weight: 700;
     font-size: 36px;
@@ -8,7 +14,7 @@
     color: var(--primary-text-color);
 }
 
-.list-item-services {
+.services__list {
     list-style: none;
     text-decoration: none;
     display: flex;
@@ -17,11 +23,11 @@
     gap: 30px;
 }
 
-.photo-service {
+.services__photo {
     position: relative;
 }
 
-.text-over-photo {
+.services_text {
     position: absolute;
     bottom: 0;
     left: 0;
